Meta description on main pages

--- a/bar.html
+++ b/bar.html
@@ -7,6 +7,7 @@
 <html>
 <head>
   <title>Match the Bar</title>
+  <meta name="description" content="Encuentra un bar donde ver el partido. Es fácil con Match the Bar. Ver en el mapa todos los bares que muestran el partido que quieres ver." />
     <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/bar.css" />
     <script src="http://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
