--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 <head>
   <meta name="google-site-verification" content="bUOyYu6QLscuA3ePpr80jiDRbUVw7MXBwkuexHL8Kcc" />
+  <meta name="description" content="Encuentra un bar donde ver el partido. Es fácil con Match the Bar. Ver en el mapa todos los bares que muestran el partido que quieres ver." />
   <title>Match the Bar - ¿Dónde ver el partido?</title>
     <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/bar.css" />
