Fixing tweet button

--- a/descarga.html
+++ b/descarga.html
@@ -70,44 +70,68 @@
   </header>
   <article>
     <section>
+
       <div style="height: 80px">
       </div>
+
       <div>
         <h2 style="text-align: center">¡Descárgatela gratis!</h2>
       </div>
+
       <div style="height: 20px">
       </div>
+
       <div>
         <img src="images/google-play.png" class="center">
       </div>
+
       <div style="height: 20px">
       </div>
+
       <div>
         <img src="images/app-store.png" class="center">
       </div>
+
       <div style="height: 20px">
       </div>
+
       <div>
         <img src="images/iphone-banner.png" class="center">
       </div>
+
       <div style="height: 20px">
       </div>
+
       <div>
         <h2 style="text-align: center">¡Compártela!</h2>
       </div>
-      <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fmatchthebar.com%2Fdescarga.html&layout=button&size=large&mobile_iframe=true&width=73&height=28&appId" width="73" height="28" style="border:none;overflow:hidden" scrolling="no" class="center" frameborder="0" allowTransparency="true"></iframe>
-      <div style="height: 20px">
+
+      <div class="white">
+
+        <div>
+        <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fmatchthebar.com%2Fdescarga.html&layout=button&size=large&mobile_iframe=true&width=73&height=28&appId"
+          scrolling="no"
+          height="50"
+          width="88"
+          class="buttons"
+          id="button1"
+          frameborder="0"
+          allowTransparency="true">
+        </iframe>
       </div>
-      <iframe
-        src="https://platform.twitter.com/widgets/tweet_button.html?size=l&url=http%3A%2F%2Fmatchthebar.com/descarga.html&via=matchthebar&related=twitterapi%2Ctwitter&text=Encuentra%20un%20bar%20donde%20ver%20el%20partido"
-        width="73"
-        class="center"
-        height="28"
-        data-size="large"
-        style="border: none; overflow: hidden;">
-      </iframe>
-      <div style="height: 20px">
+
+      <div>
+        <iframe
+          src="https://platform.twitter.com/widgets/tweet_button.html?size=l&url=http%3A%2F%2Fmatchthebar.com/descarga.html&via=matchthebar&related=twitterapi%2Ctwitter&text=Encuentra%20un%20bar%20donde%20ver%20el%20partido"
+          class="buttons"
+          height="50"
+          width="88"
+          id="button2">
+        </iframe>
       </div>
+
+      </div>
+
     </section>
   </article>
   <!-- Footer -->
