Adding links to app store and WhatsApp button

--- a/descarga.html
+++ b/descarga.html
@@ -7,8 +7,11 @@
 <html>
 <head>
   <meta name="google-site-verification" content="bUOyYu6QLscuA3ePpr80jiDRbUVw7MXBwkuexHL8Kcc" />
-  <meta name="description" content="Encuentra un bar donde ver el partido. Es fácil con Match the Bar. Ver en el mapa todos los bares que muestran el partido que quieres ver." />
+  <meta name="title" content="Match the Bar">
+  <meta name="description" content="Encuentra un bar donde ver el partido. Descarga la applicación ahora." />
+
   <title>Match the Bar - ¿Dónde ver el partido?</title>
+
     <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/bar.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/descarga.css" />
@@ -82,14 +85,18 @@
       </div>
 
       <div>
-        <img src="images/google-play.png" class="center">
+        <a href="https://play.google.com/store/apps/details?id=com.matchthebar.fans">
+          <img src="images/google-play.png" class="center">
+        </a>
       </div>
 
       <div style="height: 20px">
       </div>
 
       <div>
-        <img src="images/app-store.png" class="center">
+        <a href="https://itunes.apple.com/es/app/match-the-bar/id1358849690?l=en&mt=8">
+          <img src="images/app-store.png" class="center">
+        </a>
       </div>
 
       <div style="height: 20px">
@@ -128,6 +135,17 @@
           width="88"
           id="button2">
         </iframe>
+      </div>
+
+      <div class="buttons">
+        <center>
+        <a class="icon fa-whatsapp" id="whatsapp" href="https://api.whatsapp.com/send?text=Descarga Match the Bar hoy: http://www.matchthebar.com/descarga.html">
+          Whatsapp
+        </a>
+      </center>
+      </div>
+
+      <div style="height: 20px">
       </div>
 
       </div>
