Startup ole image

--- a/event.html
+++ b/event.html
@@ -85,7 +85,7 @@
       </div>
 
       <div>
-        <img src="images/startup_ole.jpg" class="center" width="100%">
+        <img src="images/Startup_ole.jpg" class="center" width="100%">
       </div>
 
       <div style="height: 20px">
