Updated design of ES homepage

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
         <p>Encuentra un bar<br>
         donde ver el partido.</p>
         <img alt="site logo"
-               src="images/logo.png">
+             src="images/logo.png"
+             id="header_image">
       </div>
     </section><!-- One -->
     <section id="two" class="wrapper alt style2">
@@ -89,7 +90,7 @@
         </div>
         <div class="image">
           <div class="videoWrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/JlVxmH5bUhM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/SiS44mke9zI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
       </section>
@@ -101,7 +102,7 @@
           </p>
         </div>
         <div class="image">
-          <img src="images/Plataforma_fans.png" alt>
+          <img src="images/iphone-banner.png" alt id="phone_banner">
         </div>
       </section>
       <section class="spotlight">
@@ -114,7 +115,7 @@
           </p>
         </div>
         <div class="image">
-          <img src="images/Plataforma_bar.png" alt>
+          <img src="images/iphone-banner.png" alt id="phone_banner">
         </div>
       </section>
     </section>
