--- a/index_en.html
+++ b/index_en.html
@@ -69,11 +69,11 @@
     <section id="banner">
       <div class="inner">
         <h2>Match the Bar</h2>
-        <p>Find a local bar<br>
-        to watch your<br>
-        favorite sports.</p>
+        <p>Find a  bar<br>
+        to watch the match</p>
         <img alt="site logo"
-               src="images/logo.png">
+             src="images/logo.png"
+             id="header_image">
       </div>
     </section><!-- One -->
     <section id="two" class="wrapper alt style2">
@@ -90,7 +90,7 @@
         </div>
         <div class="image">
           <div class="videoWrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/JlVxmH5bUhM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/SiS44mke9zI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
       </section>
