Updated design EN homepage

--- a/index_en.html
+++ b/index_en.html
@@ -103,7 +103,7 @@
           </p>
         </div>
         <div class="image">
-          <img src="images/Fan_platform.png" alt>
+          <img src="images/iphone-banner.png" alt id="phone_banner">
         </div>
       </section>
       <section class="spotlight">
@@ -116,7 +116,7 @@
           </p>
         </div>
         <div class="image">
-          <img src="images/Bar_platform.png" alt>
+          <img src="images/iphone-banner.png" alt id="phone_banner">
         </div>
       </section>
     </section>
