Update all menu links to redirect to the download page

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <a href="index.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">Home</a>
       </li>
       <li>
-        <a href="sign_up.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Registrar</a>
+        <a href="descarga.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Descarga</a>
       </li>
       <li>
         <a href="bar.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">¿Eres un bar?</a>
