--- a/privacy_en.html
+++ b/privacy_en.html
@@ -314,7 +314,7 @@
       <a href="index_en.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">Home</a>
     </li>
     <li>
-      <a href="sign_up_en.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Sign up</a>
+      <a href="descarga.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Download</a>
     </li>
     <li>
       <a href="bar_en.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Are you a bar?</a>
