--- a/descarga.html
+++ b/descarga.html
@@ -211,7 +211,7 @@
         <a href="index.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">Home</a>
       </li>
       <li>
-        <a href="sign_up.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Registrar</a>
+        <a href="descarga.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Download</a>
       </li>
       <li>
         <a href="bar.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">¿Eres un bar?</a>
@@ -225,7 +225,7 @@
       <li></li>
         <br><br><br><br>
       <li>
-        <a href="index_en.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);"><img src="images/british_flag.png" width="60px" height="35px" /></a>
+        <a href="descarga.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);"><img src="images/british_flag.png" width="60px" height="35px" /></a>
       </li>
     </ul>
     <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
