Google tag manager tracking code

--- a/bar_en.html
+++ b/bar_en.html
@@ -6,6 +6,13 @@
 -->
 <html>
 <head>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KZF7F83');</script>
+<!-- End Google Tag Manager -->
   <title>Match the Bar</title>
   <meta name="description" content="Find a bar to watch the match. It's easy with Match the Bar. Check out a map with all the bars showing the match." />
     <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
@@ -50,6 +57,10 @@
         </script>
 </head>
 <body class="is-mobile">
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KZF7F83"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <div id="page-wrapper">
     <header id="header">
       <h1>
