--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 -->
 <html>
 <head>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KZF7F83');</script>
+<!-- End Google Tag Manager -->
   <meta name="google-site-verification" content="bUOyYu6QLscuA3ePpr80jiDRbUVw7MXBwkuexHL8Kcc" />
   <meta name="description" content="Encuentra un bar donde ver el partido. Es fácil con Match the Bar. Ver en el mapa todos los bares que muestran el partido que quieres ver." />
   <meta name="title" content="Match the Bar - ¿Dónde ver el partido" />
@@ -52,6 +59,10 @@
         </script>
 </head>
 <body class="landing">
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KZF7F83"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <!-- Page Wrapper -->
   <div id="page-wrapper">
     <!-- Banner -->
