--- a/event.html
+++ b/event.html
@@ -6,6 +6,13 @@
 -->
 <html>
 <head>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KZF7F83');</script>
+<!-- End Google Tag Manager -->
   <meta name="google-site-verification" content="bUOyYu6QLscuA3ePpr80jiDRbUVw7MXBwkuexHL8Kcc" />
   <meta name="title" content="Match the Bar">
   <meta name="description" content="Encuentra un bar donde ver el partido. Descarga la applicación ahora." />
@@ -55,6 +62,10 @@
         </script>
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KZF7F83"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <header id="header">
     <h1>
       <a href="index.html">Match the Bar</a>
