--- a/descarga.html
+++ b/descarga.html
@@ -241,5 +241,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </ul>
     <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
   </div>
+  <!-- Twitter universal website tag code -->
+<script>
+!function(e,t,n,s,u,a){e.twq||(s=e.twq=function(){s.exe?s.exe.apply(s,arguments):s.queue.push(arguments);
+},s.version='1.1',s.queue=[],u=t.createElement(n),u.async=!0,u.src='//static.ads-twitter.com/uwt.js',
+a=t.getElementsByTagName(n)[0],a.parentNode.insertBefore(u,a))}(window,document,'script');
+// Insert Twitter Pixel ID and Standard Event data below
+twq('init','nzh5j');
+twq('track','PageView');
+</script>
+<!-- End Twitter universal website tag code -->
 </body>
 </html>
