English menu correction

--- a/partners_en.html
+++ b/partners_en.html
@@ -195,7 +195,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <ul class="copyright">
     <li>© Match the Bar</li>
     <li>
-      <a href="privacy.html">Política de privicidad</a>
+      <a href="privacy_en.html">Privacy policy</a>
     </li>
   </ul>
 </footer>
