Adding partners option to the english page menus

--- a/bar_en.html
+++ b/bar_en.html
@@ -210,6 +210,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <a href="bar_en.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Are you a bar?</a>
     </li>
     <li>
+      <a href="partners_en.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Partners</a>
+    </li>
+    <li>
       <a href="https://medium.com/@matchthebar" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Blog</a>
     </li>
     <li>
