Spanish partner landing page and menu links

--- a/partners.html
+++ b/partners.html
@@ -79,66 +79,83 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </nav>
     </header>
     <article id="main">
-      <header>
-        <h2 id="border">
-          Únete a nuestra comunidad
-        </h2>
-      </header>
+        <img src="images/Spa_flags.png" width="100%"/>
         <section class="wrapper alt style2" id="two">
           <section class="spotlight">
             <div class="image">
-              <video width="100%" autoplay loop>
-                <source src="videos/App_search.mp4" type="video/mp4">
-              </video>          </div>
+              <img src="images/Barcelona.jpg" width="100%" />
+
+            </div>
             <div class="content">
               <br>
-              <h3 class="black_highlight"><span>Mejore su presencia en internet</span></h3>
-              <p><strong class="blue_highlight">Visibilidad</strong>: los clientes le encontrarán cuando busquen un partido de fútbol o un campeonato en concreto.</p>
-              <p><strong class="blue_highlight">Confianza</strong>: ofrecerá una información más detallada de sus servicios, facilitando que los clientes le escojan para ver su partido favorito.</p>
-              <p><strong class="blue_highlight">Transparencia</strong>: los clientes valoran muy positivamente poder consultar el precio de sus servicios/productos.</p>
+              <h3 class="black_highlight"><span>¿Qué es el Barcelona World Cup?</span></h3>
+              <p>
+                El Barcelona World Cup es un torneo concebido para<strong class="blue_highlight"> compartir a través del deporte y promover el compañerismo</strong>.
+              </p>
+              <p>
+                La idea es hacer una reproducción del Mundial de Rusia en <strong class="blue_highlight">fútbol 7</strong> con 32 equipos representando a las selecciones nacionales.
+              </p>
+              <p>
+                Es la excusa perfecta para <strong class="blue_highlight">pasar el dia con tus amigos</strong> en el sol de Barcelona, disfrutando de buena compañia y buen fútbol.
+              </p>
+                <br>
+              </p>
               <br>
             </div>
           </section>
           <section class="spotlight">
             <div class="image">
-              <video width="100%" autoplay loop>
-                <source src="videos/talking_bar.mp4" type="video/mp4">
-              </video>
+              <img src="images/Pitch.jpg" width="100%" />
             </div>
             <div class="content">
               <br>
-              <h3 class="black_highlight"><span>Mejore su reputación online</span></h3>
-              <p><strong class="blue_highlight">Su valor diferencial</strong>: póngase en la piel del cliente y explique lo que considera que le diferencia de otros bares adelantándose a las preguntas más comunes, como por ejemplo, lo que incluye el menú o a qué tipo de aficionado va dirigido.</p>
-              <p><strong class="blue_highlight">Sus puntos fuertes</strong>: explique en qué se diferencia y en qué destaca respecto a los demás bares, por ejemplo: números de televisores, proyector, barra, etc.</p>
-              <br>
+              <h3 class="black_highlight"><span>El torneo</span></h3>
+              <p><strong class="blue_highlight">Qué</strong>: 32 equipos con 8-10 jugadores</p>
+              <p><strong class="blue_highlight">Cuándo</strong>: Domingo, Julio 1 de 10h - 18h</p>
+              <p><strong class="blue_highlight">Dónde</strong>: Los campos de fútbol de la Universidad de Barcelona, en la Avenida Diagonal.</p>
             </div>
           </section>
           <section class="spotlight">
             <div class="image">
-              <video width="100%" autoplay loop>
-                <source src="videos/Graphs.mp4" type="video/mp4">
-              </video>
+              <img src="images/prize.jpg" width="100%" />
+
             </div>
             <div class="content">
               <br>
-              <h3 class="black_highlight"><span>Gestione mejor su tiempo</span></h3>
-              <p><strong class="blue_highlight">Medir</strong>: los resultados y cuántos clientes han visitado a su bar.</p>
-              <p><strong class="blue_highlight">Analizar</strong>: comprenda las implicaciones y los mejores deportes para su bar.</p>
-              <p><strong class="blue_highlight">Aprender</strong>: nuestros consejos de marketing le permitirán mejorar sus resultados.</p>
-              <br>
+              <h3 class="black_highlight"><span>¿Por qué debo inscribir?</span></h3>
+              <p><strong class="blue_highlight">Fútbol</strong>: Estás garantizado <u>como mínimo</u> 4 partidos de 2 * 6' partes</p>
+              <p><strong class="blue_highlight">Actividades adicionales</strong>: Un fan zone, un torneo de penaltis, Teqball,  juegos para los más pequeños y un taller de pintura. Se instalarán dos foodtrucks para poder picar algo durante el evento</p>
+              <p><strong class="blue_highlight">Ventajas</strong>: Recibes un welcome pack con acceso al campo, camisetas personalizadas con nombre y colores de las selecciones, acreditaciones y regalos.</p>
             </div>
           </section>
           <section class="spotlight">
             <div class="image">
-              <div class="videoWrapper">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/LX3-les4iyA?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen ></iframe>
-              </div>
+              <img src="images/team.jpg" width="100%" />
             </div>
-            <div class="content" style="text-align: center">
-              <h2>¿Estás listo <span class="blue_highlight">para empezar?</span></h2>
-              <p>Programe una demostración gratuita hoy.</p>
-              <span style="color: #25d366"><p><a class="icon fa-whatsapp" href="https://api.whatsapp.com/send?phone=34687676487"> Whatsapp</a></p></span>
-              <span class="blue_highlight"><p><a class="icon fa-envelope-o" href="mailto:info@matchthebar.com"> Correo electrónico</a></span>
+            <div class="content">
+              <br>
+              <h3 class="black_highlight"><span>¿Estás listo para empezar?</span></h3>
+              <p><strike><strong class="blue_highlight">Precio</strong>: 250€ </strike></p>
+              <p><strong class="blue_highlight">Precio con Match the Bar</strong>: 200€</p>
+              <p>¡Sólo con mencionar que vienes de parte de Match the Bar y conseguirás un descuento de 50€!</p>
+              <p>Si reunes 10 personas en tu equipo significa que es <strong class="blue_highlight">sólo 20€ por persona!</strong></p>
+              <p>Sólo esto por un día de actividades, una camiseta personalizada, un welcome pack y regalos, ¡además al torneo de fútbol!</p>
+            </div>
+          </section>
+          <section class="spotlight">
+            <div class="image">
+              <img src="images/question.jpg" width="100%" />
+
+            </div>
+            <div class="content">
+              <br>
+              <h3 class="black_highlight"><span>¿Preguntas?</span></h3>
+                <p>Si tienes cualquier pregunta, no dudes en contactarnos.</p>
+                <p>¿Eres un jugador individual? Haznos lo saber y encontraramos un equipo para ti.</p>
+                <span style="color: #25d366"><p><a class="icon fa-whatsapp" href="https://api.whatsapp.com/send?phone=34689683266"> Whatsapp</a></p></span>
+                <span class="blue_highlight"><p><a class="icon fa-envelope-o" href="mailto:flagsbarcelona@gmail.com"> Email</a></span>
+              <br>
+            </div>
           </section>
         </section>
     </article>
