--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="bar.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">¿Eres un bar?</a>
       </li>
       <li>
+        <a href="partners.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Partners</a>
+      </li>
+      <li>
         <a href="https://medium.com/@matchthebar" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Blog</a>
       </li>
       <li>
