--- a/partners_en.html
+++ b/partners_en.html
@@ -236,7 +236,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li></li>
       <br><br><br><br>
       <li>
-        <a href="index.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);"><img src="images/spanish_flag.png" width="60px" height="35px" /></a>
+        <a href="partners.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);"><img src="images/spanish_flag.png" width="60px" height="35px" /></a>
       </li>
   </ul>
   <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
