--- a/partners.html
+++ b/partners.html
@@ -90,13 +90,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <br>
               <h3 class="black_highlight"><span>¿Qué es el Barcelona World Cup?</span></h3>
               <p>
-                El Barcelona World Cup es un torneo concebido para<strong class="blue_highlight"> compartir a través del deporte y promover el compañerismo</strong>.
+                El Barcelona World Cup es un torneo concebido para<strong class="blue_highlight"> compartir la pasión por el deporte y promover el compañerismo</strong>.
               </p>
               <p>
                 La idea es hacer una reproducción del Mundial de Rusia en <strong class="blue_highlight">fútbol 7</strong> con 32 equipos representando a las selecciones nacionales.
               </p>
               <p>
-                Es la excusa perfecta para <strong class="blue_highlight">pasar el dia con tus amigos</strong> en el sol de Barcelona, disfrutando de buena compañia y buen fútbol.
+                Es la excusa perfecta para <strong class="blue_highlight">pasar el dia con tus amigos</strong> bajo el sol de Barcelona, disfrutando de buena compañía y buen fútbol
               </p>
                 <br>
               </p>
@@ -111,7 +111,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <br>
               <h3 class="black_highlight"><span>El torneo</span></h3>
               <p><strong class="blue_highlight">Qué</strong>: 32 equipos con 8-10 jugadores</p>
-              <p><strong class="blue_highlight">Cuándo</strong>: Domingo, Julio 1 de 10h - 18h</p>
+              <p><strong class="blue_highlight">Cuándo</strong>: Domingo, 1 de Julio de 10h - 18h</p>
               <p><strong class="blue_highlight">Dónde</strong>: Los campos de fútbol de la Universidad de Barcelona, en la Avenida Diagonal.</p>
             </div>
           </section>
@@ -122,10 +122,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="content">
               <br>
-              <h3 class="black_highlight"><span>¿Por qué debo inscribir?</span></h3>
-              <p><strong class="blue_highlight">Fútbol</strong>: Estás garantizado <u>como mínimo</u> 4 partidos de 2 * 6' partes</p>
+              <h3 class="black_highlight"><span>¿Por qué debería inscribirme?</span></h3>
+              <p><strong class="blue_highlight">Fútbol</strong>: Tienes garantizado <u>como mínimo</u> 4 partidos de 2 * 6' partes</p>
               <p><strong class="blue_highlight">Actividades adicionales</strong>: Un fan zone, un torneo de penaltis, Teqball,  juegos para los más pequeños y un taller de pintura. Se instalarán dos foodtrucks para poder picar algo durante el evento</p>
-              <p><strong class="blue_highlight">Ventajas</strong>: Recibes un welcome pack con acceso al campo, camisetas personalizadas con nombre y colores de las selecciones, acreditaciones y regalos.</p>
+              <p><strong class="blue_highlight">Ventajas</strong>: Recibes un welcome pack con acceso al campo, camisetas personalizadas con el nombre y colores de la selección a la que representes, acreditaciones y regalos.</p>
             </div>
           </section>
           <section class="spotlight">
@@ -136,10 +136,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <br>
               <h3 class="black_highlight"><span>¿Estás listo para empezar?</span></h3>
               <p><strike><strong class="blue_highlight">Precio</strong>: 250€ </strike></p>
-              <p><strong class="blue_highlight">Precio con Match the Bar</strong>: 200€</p>
+              <p><strong class="blue_highlight">Precio para fans de Match the Bar</strong>: 200€</p>
               <p>¡Sólo con mencionar que vienes de parte de Match the Bar y conseguirás un descuento de 50€!</p>
-              <p>Si reunes 10 personas en tu equipo significa que es <strong class="blue_highlight">sólo 20€ por persona!</strong></p>
-              <p>Sólo esto por un día de actividades, una camiseta personalizada, un welcome pack y regalos, ¡además al torneo de fútbol!</p>
+              <p>Si reunes 10 personas en tu equipo serán <strong class="blue_highlight">sólo 20€ por persona!</strong></p>
+              <p>Sólo esto por un día de actividades, una camiseta personalizada, un welcome pack y regalos, ¡además del torneo de fútbol!</p>
             </div>
           </section>
           <section class="spotlight">
@@ -151,7 +151,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <br>
               <h3 class="black_highlight"><span>¿Preguntas?</span></h3>
                 <p>Si tienes cualquier pregunta, no dudes en contactarnos.</p>
-                <p>¿Eres un jugador individual? Haznos lo saber y encontraramos un equipo para ti.</p>
+                <p>¿Te gustaría jugar pero no tienes un equipo? Háznoslo saber y encontraremos un equipo para ti.</p>
                 <span style="color: #25d366"><p><a class="icon fa-whatsapp" href="https://api.whatsapp.com/send?phone=34689683266"> Whatsapp</a></p></span>
                 <span class="blue_highlight"><p><a class="icon fa-envelope-o" href="mailto:flagsbarcelona@gmail.com"> Email</a></span>
               <br>
