BCN World Cup event page

--- a/event.html
+++ b/event.html
@@ -89,14 +89,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
 
       <div>
-        <h2 style="text-align: center" class="blue_highlight">We're at Startup Olé!</h2>
+        <h2 style="text-align: center" class="blue_highlight">¡Estamos en el Barcelona World Cup!</h2>
       </div>
 
       <div style="height: 20px">
       </div>
 
       <div>
-        <img src="images/Startup_ole.jpg" class="center" width="100%">
+        <img src="images/Spa_flags.png" class="center" width="100%">
       </div>
 
       <div style="height: 20px">
@@ -104,30 +104,29 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       <div style="text-align: center">
         <p>
-          Thanks for scanning our banner at Startup Olé!
+          Gracias por visitarnos en el evento 😀
         </p>
         <p>
-          We'd love to meet you at the event.
+          ¿Sabes que tenemos un concurso en el evento hoy a las 12h? 👇
         </p>
+        <img src="images/Poster_advertising.png" class="center" width="100%">
+        <div style="height: 20px">
+        </div>
         <p>
-          Our Co-Founders <a href="https://www.linkedin.com/in/nikkiaparsons/">Nikki</a> and <a href="https://www.linkedin.com/in/alexcarol/">Alex</a> are in Salamanca throughout the conference.
+          Si tienes preguntas de cómo participar, habla con nuestro equipo en el stand.
         </p>
-        <p>
-          You can contact us for a meeting through the event app or <span style="color: #25d366"><a class="icon fa-whatsapp" href="https://api.whatsapp.com/send?phone=34687676487"> Whatsapp</a></span>.
-        </p>
-      </div>
-
-      <div style="height: 20px;text-align: center">
-        <p>- - - - - - - - - - - - -</p>
       </div>
 
       <div style="height: 20px">
       </div>
 
-      <h2 style="text-align: center" class="blue_highlight">Don't forget to download our app!</h2>
+      <h2 style="text-align: center" class="blue_highlight">¡No olvides de descargar nuestra app!</h2>
+      <div style="text-align: center">
 
-      <div style="height: 20px">
-      </div>
+      <p>
+        Te ayudamos a encontrar un bar donde ver el partido. Es fácil y gratis 😊
+      </p>
+    </div>
 
       <div>
         <a href="https://play.google.com/store/apps/details?id=com.matchthebar.fans">
