--- a/event.html
+++ b/event.html
@@ -255,7 +255,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="index.html" style="-webkit-tap-highlight-color: rgba(#14a7d0);">Home</a>
       </li>
       <li>
-        <a href="download.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Descarga</a>
+        <a href="descarga.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Descarga</a>
       </li>
       <li>
         <a href="bar.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">¿Eres un bar?</a>
